202

- Update to Jetty 9.4.30.v20200611.
- Fix http client distribution JMX metrics.

201

- Allow expanding environment variables within config values.

200

- Add client certificate support to testing http server.

0.199

- Add certificate reloading to HTTP server. By default certificates are reloaded
  once a minute. This can be controlled with 'http-server.https.ssl-context.refresh-time'.
- Add Guice binding for HTTP server client certificate requirement.
  Note: client certificates are no longer requested by default.
- Move combine method to ConfigurationAwareModule.
- Add missing JAXB dependency for jaxrs-testing.

0.198

- Fix failures when inserting values into DecayTDigest.
- Use RejectedExecutionException in BoundedExecutor.
- Improve configuration error reporting.

0.197

- Change HttpUriBuilder to not render default port for HTTP and HTTPS.
- Add optional support Forwarded and X-Forwarded headers in proxied environments.
- Add Logging.clearLevel(loggerName) to unset a log level.

0.196

- Do not start JmxAgent by default.
- Fix liveness detection for launcher run command on Python 3.4+.
- Fix size estimation error when updating a t-digest.
- Deprecate Closeables.closeQuietly.
- Add @FileExists validation.

0.195

- Only forbid binder.install() for ConfigurationAwareModule.
- Publish Maven BOM.

0.194

- Fix DecayTDigest.rescale() handling of max of means.
- Fix potential IndexOutOfBounds in t-digest.
- Forbid direct binder.install() in AbstractConfigurationAwareModule.
- Add CacheStatsMBean for reporting Guava cache statistics.
- Add utility combine() method for ConfigurationAwareModule.
- Add support for setting process name on Linux aarch64.
- Allow passing additional JVM options in launcher.
- Clean up logging in LifeCycleManager.

0.193

- Move HTTP event client to new event-http module.
- Remove deprecated NullEventModule.
- Present explicit error messaging from launcher.py when Java is not installed.
- Update to Jetty 9.4.27.v20200227.

0.192
