@@ -1,3 +1,7 @@
+203
+
+- Limit total size of HTTP client log.
+
 202
 
 - Update to Jetty 9.4.30.v20200611.
